[package]
name = "oasis"
version = "0.1.0"
authors = ["tim"]
build = "build.rs" # <-- We added this and everything after!

[build-dependencies]
lalrpop = "0.11.0"

[dependencies]
lalrpop-util = "0.11.0"
rand = "0.3"
strfmt = "0.1.5"
ctrie = { git = "https://github.com/tcr/ctrie" }
uuid = { version = "0.2", features = ["v4"] }
